# meiou

./: .gitignore  README.md
APP_new_zhong_fenqu_SX/: CDV1004QTOS  Makefile  README.md  run.sh
APP_new_zhong_fenqu_SX/Untitled Project.si4project/: Untitled Project.sip_xab  Untitled Project.sip_xad  Untitled Project.sip_xr  Untitled Project.sip_xsd  Untitled Project.siwork
APP_new_zhong_fenqu_SX/common/: CMakeCache.txt  Makefile  h264_encode.c  i2c_ctrl.c  lv_msg_event.c  media_thumb.c  mjpeg_encode.c  pwm_ctrl.c  uart_ctrl.c  user_file.c  user_time.c  video_input.c  wifi_api.c
APP_new_zhong_fenqu_SX/layout/: TP9950_720P_AHD_CFG  gsm6502.h  gsm6505.c  language.c  language.h  layout_adj_display.c  layout_alarm.c  layout_alarm_list.c  layout_clear_screen.c  layout_common.c  layout_common.h  layout_define.h  layout_document_list.c  layout_frame_show.c  layout_intercom_out.c  layout_ipc_camera_m_add.c  layout_logo.c  layout_monitor.c  layout_onvif_info.c  layout_onvif_preview.c  layout_onvif_search.c  layout_security.c  layout_settig_background.c  layout_setting_calendar.c  layout_setting_common.c  layout_setting_etc.c  layout_setting_frame.c  layout_setting_frame_time.c  layout_setting_language.c  layout_setting_night_mode.c  layout_setting_password.c  layout_setting_record.c  layout_standby_display_picture.c  layout_video.c  layout_wifi_input.c  testRTSPClient.cpp  tp9950.c  tp9950.h  upgrade_firmware.c  user_alarm_list.h  (+8 more)
APP_new_zhong_fenqu_SX/res/: rom.h
APP_new_zhong_fenqu_SX/share/: CMakeLists.txt  Makefile
APP_new_zhong_fenqu_SX/tuya_key/: 2022-05-27.xls
APP_new_zhong_fenqu_SX/upgrade/: config.jffs2  make_image.sh  partition_image.sh  run.sh
ME_NEW_APP_COMMON/: CDV1004QTOS  README.md  autoBuild.sh
ME_NEW_APP_COMMON/Untitled Project.si4project/: Untitled Project.bookmarks.xml  Untitled Project.sip_xc  Untitled Project.sip_xf  Untitled Project.sip_xm  Untitled Project.sip_xsb  Untitled Project.siproj  Untitled Project.siproj_settings.xml
ME_NEW_APP_COMMON/common/: CMakeLists.txt  audio_input.c  audio_output.c  avilib.c  avilib.h  cmake_install.cmake  gpio_ctrl.c  h264_decode.c  mjpeg_decode.c  motion_detection.c  platform_mtd.c  platform_mtd.h  ringplay.c  user_common.c  user_standby.c  video_play.c  video_record.c  wifi_api.c
ME_NEW_APP_COMMON/layout/: TP9950_AHD_1080P_CFG  TP9950_CVBS_CFG  info.h  lang_xls.c  lang_xls.h  laout_wifi_display.c  layout_alarm.c  layout_always_record.c  layout_click.c  layout_close.c  layout_common.c  layout_define.h  layout_home.c  layout_intercom.c  layout_intercom_in.c  layout_intercom_talk.c  layout_logo.c  layout_monitor.c  layout_onvif_input.c  layout_photo.c  layout_playbck.c  layout_setting_common.h  layout_setting_date.c  layout_setting_display.c  layout_setting_etc.c  layout_setting_etc_tuya_info.c  layout_setting_frame_list.c  layout_setting_intercom_ring.c  layout_setting_motion.c  layout_setting_motion_timer.c  layout_setting_obj_template.c  layout_setting_obj_template.h  layout_setting_storage.c  layout_setting_time.c  layout_setting_volume.c  layout_setting_volume_vol.c  layout_srttiing_id.c  (+9 more)
ME_NEW_APP_COMMON/share/jpeg/: CMakeLists.txt  Makefile  config.status  example.c  libtool
ME_NEW_APP_COMMON/share/libiconv/: CMakeLists.txt  Makefile  config.status
ME_NEW_APP_COMMON/share/libiconv/lib/: config.h
ME_NEW_APP_COMMON/share/libiconv/libcharset/: config.status  libtool
ME_NEW_APP_COMMON/share/libiconv/libcharset/lib/: localcharset.c
ME_NEW_APP_COMMON/share/libiconv/tests/: Makefile
ME_NEW_APP_COMMON/share/zlib/: CMakeLists.txt  cmake_install.cmake  example.c
meiou_AK37D_fenqu/: README.md  build.sh  c500_cbd_ak3761d_dsi_SRA_704MAHT_v1.0.0.dts  linux分区计算器.xlsx  make_image.sh  uboot_display.c
meiou_AK37D_fenqu/os/driver_src/wifi/ws73_sdk_linux108_20240711/application/dft/bsle_dft_channel/: CMakeLists.txt  release.mk
meiou_AK37D_fenqu/os/driver_src/wifi/ws73_sdk_linux108_20240711/application/dft/bsle_dft_channel/dft_channel/: CMakeLists.txt  bsle_dft_chan_user.c
meiou_AK37D_fenqu/os/driver_src/wifi/ws73_sdk_linux108_20240711/application/dft/bsle_dft_channel/dft_shell/: CMakeLists.txt  bsle_dft_at_server.h  msg_queue.h
(+6213 files in other folders)
